--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
   <link href="assets/css/material-dashboard.css" rel="stylesheet"/>
 
   <!--     Fonts and icons     -->
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+  <link href='assets/css/roboto-material-icons.css' rel='stylesheet' type='text/css'>
+  <!--<script src="https://code.jquery.com/jquery-1.10.2.js"></script>-->
 
 </head>
 <body>
