--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,35 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Memories</title>
-  <base href="/">
+    <meta charset="utf-8">
+    <title>Memories</title>
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <!-- Bootstrap core CSS     -->
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
 
-  <!--  Material Dashboard CSS    -->
-  <link href="assets/css/material-dashboard.css" rel="stylesheet"/>
+    <!-- Google Platform JS for google+ sign in -->
+    <script src="assets/js/google-platform.js" async defer></script>
 
-  <!--     Fonts and icons     -->
-  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-  <link href='assets/css/roboto-material-icons.css' rel='stylesheet' type='text/css'>
-  <!--<script src="https://code.jquery.com/jquery-1.10.2.js"></script>-->
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="284616683206-flapev0ljlv6r01etd7oqgp2vao7f8gl.apps.googleusercontent.com">
+
+
+    <!-- Bootstrap core CSS     -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
+
+    <!--  Material Dashboard CSS    -->
+    <link href="assets/css/material-dashboard.css" rel="stylesheet"/>
+
+    <!--     Fonts and icons     -->
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href='assets/css/roboto-material-icons.css' rel='stylesheet' type='text/css'>
+    <!--<script src="https://code.jquery.com/jquery-1.10.2.js"></script>-->
 
 </head>
 <body>
-  <app-root>Loading...</app-root>
+<app-root>Loading...</app-root>
 </body>
 
 <!--   Core JS Files   -->
@@ -38,5 +46,6 @@
 
 <!-- Material Dashboard javascript methods -->
 <script src="assets/js/material-dashboard.js"></script>
+
 
 </html>
