integrate ng bootstrap, clicking fab plus icon opens create memory modal box

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id" content="284616683206-flapev0ljlv6r01etd7oqgp2vao7f8gl.apps.googleusercontent.com">
 
+    <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
 
     <!-- Bootstrap core CSS     -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
